@startuml Diagrama

skinparam Linetype ortho
skinparam style strictuml

class CentroImpresion {
    +agregarDocumento(code: String, titulo: String, prioridad: int, contenido: String): void
    +agregarImpresora(code: String, estaConectada: boolean): void
    +eliminarDocumento(code: String) : void
    +eliminarImpresora(code: String) : void
    +buscarDocumento(code: String) : Documento
    +buscarImpresora(code: String) : Impresora
    +imprimirDocumento(): void
    +imprimirDocumento(codeImpresora: String): void
    +imprimirDocumento(codeImpresora: String, codeDocumento: String): void
    +imprimirDocumentoCodigoDoc(codeDocumento: String): void
}

enum EstadoImpresora <<enumeration>> {
    ACTIVO
    INACTIVO
    DESCONECTADO
    MANTENIMIENTO
}

abstract class Impresora <<abstract>> {
    #code : String
    #marca : String
    #letrasPorSegundo : double
    #esAColor : boolean
    #paginasImpresas : int
    +estaActiva() : boolean
    +<i>imprimirDocumento(momento: LocalDateTime, documento: Documento) : void
    +<i>recargar() : void
}
class ImpresoraLaser {
    -nivelToner : int
    -duracionToner : int
    +recargarToner() : void
    +imprimirDocumento() : void
    +imprimirDocumento(momento: LocalDateTime, documento: Documento) : void
}

class ImpresoraCartucho {
    -capacidadCartucho : double
    -nivelCartucho : double
    -desgasteCartucho : double
    +recargar() :void
    +imprimirDocumento(momento: LocalDateTime, documento: Documento) : void
}

class Documento {
    -code : String
    -titulo : String
    -prioridad : int
    -contenido : String
    -fechaAgregado : LocalDateTime
    -fechaImpresion : LocalDateTime
    +obtenerCantPaginas() : int
    +estadoImpresion() : boolean
}
ImpresoraCartucho --|> Impresora
ImpresoraLaser --|> Impresora
CentroImpresion " * " *---> " 1 " Documento : -listaDocumentos
CentroImpresion " * " *---> " 1 " Documento : -listaDocumentosImpresos
CentroImpresion " * "  *--> " 1 " Impresora : -listaImpresoras
Impresora " 1 " o--> " * " Documento : -listaDocumentos

Impresora ". 1 " --> EstadoImpresora : -estado
@enduml